fix scrollbars in nav and footer

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -63,6 +63,10 @@ footer {
     font-size: 15px;
   }
 
+  .contact-us {
+    overflow: hidden;
+  }
+
   .credits {
     font-size: 13px;
     margin-top: 13px;
